# ml-project

./: classifier.py  main.py  pyproject.toml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
notebooks/: final_model.joblib  ml_v1.ipynb  ml_v2.ipynb
notebooks/data/: finance_classification_dataset (1).csv
